--- a/GGBB_re/2_main/Main.storyboard
+++ b/GGBB_re/2_main/Main.storyboard
@@ -38,7 +38,19 @@
                     <view key="view" contentMode="scaleToFill" id="ASU-Bu-J9t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oNh-a4-WAc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oNh-a4-WAc" firstAttribute="leading" secondItem="WHZ-S0-cev" secondAttribute="leading" id="4eQ-Wh-fzQ"/>
+                            <constraint firstItem="WHZ-S0-cev" firstAttribute="bottom" secondItem="oNh-a4-WAc" secondAttribute="bottom" id="Ejc-hU-xSK"/>
+                            <constraint firstItem="oNh-a4-WAc" firstAttribute="top" secondItem="WHZ-S0-cev" secondAttribute="top" id="F3d-qR-lon"/>
+                            <constraint firstItem="WHZ-S0-cev" firstAttribute="trailing" secondItem="oNh-a4-WAc" secondAttribute="trailing" id="qI7-QA-w9P"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WHZ-S0-cev"/>
                     </view>
                     <navigationItem key="navigationItem" title="응답하라경기북부" id="SMD-9I-jXn">
@@ -67,6 +79,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
+                        <outlet property="containerView" destination="oNh-a4-WAc" id="i66-jQ-0zg"/>
                         <outlet property="navItem" destination="SMD-9I-jXn" id="jbC-pA-tE5"/>
                     </connections>
                 </viewController>
@@ -407,7 +420,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iMn-SK-Kb6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="342" y="887"/>
+            <point key="canvasLocation" x="-452" y="903"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="0eN-v0-g3X">
@@ -422,7 +435,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WPf-0T-ZSU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1084" y="887"/>
+            <point key="canvasLocation" x="-452" y="1604"/>
         </scene>
         <!--Test02 View Controller-->
         <scene sceneID="MZa-yP-8ra">
@@ -2032,7 +2045,7 @@
                                                                     <outlet property="delegate" destination="CjG-s5-nVG" id="hhn-Vf-hZQ"/>
                                                                 </connections>
                                                             </tableView>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="정렬 기준" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLC-ZG-fSp">
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문의 종류" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RLC-ZG-fSp">
                                                                 <rect key="frame" x="0.0" y="10" width="335" height="30"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                                 <nil key="textColor"/>
