--- a/GGBB_re/3_storeInfo/StoreInfo.storyboard
+++ b/GGBB_re/3_storeInfo/StoreInfo.storyboard
@@ -17,10 +17,25 @@
                     <view key="view" contentMode="scaleToFill" id="FFa-cF-Y3A">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I9d-WJ-eW0">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qrm-2W-RDa" firstAttribute="bottom" secondItem="I9d-WJ-eW0" secondAttribute="bottom" id="0qP-SP-Sxm"/>
+                            <constraint firstItem="qrm-2W-RDa" firstAttribute="trailing" secondItem="I9d-WJ-eW0" secondAttribute="trailing" id="MVe-E8-cas"/>
+                            <constraint firstItem="I9d-WJ-eW0" firstAttribute="leading" secondItem="qrm-2W-RDa" secondAttribute="leading" id="XOx-ZE-1Lh"/>
+                            <constraint firstItem="I9d-WJ-eW0" firstAttribute="top" secondItem="qrm-2W-RDa" secondAttribute="top" id="uYl-u7-kf3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qrm-2W-RDa"/>
                     </view>
                     <navigationItem key="navigationItem" title="슬로우 로스터리 카페" id="Siv-av-8EO"/>
+                    <connections>
+                        <outlet property="containerView" destination="I9d-WJ-eW0" id="lo5-7F-jkI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCe-X7-7FZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1461,6 +1476,17 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ls-v7-2Uh">
+                                <rect key="frame" x="305" y="40" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Xtl-gv-3De"/>
+                                    <constraint firstAttribute="height" constant="50" id="sai-Wf-hHO"/>
+                                </constraints>
+                                <state key="normal" image="my_location"/>
+                                <connections>
+                                    <action selector="goMyLocation:" destination="DGV-pS-gZN" eventType="touchUpInside" id="rYQ-jG-Z4p"/>
+                                </connections>
+                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sOs-S2-waL">
                                 <rect key="frame" x="0.0" y="527" width="375" height="140"/>
                                 <constraints>
@@ -1551,15 +1577,18 @@
                             <constraint firstItem="oe9-4t-JYF" firstAttribute="trailing" secondItem="44e-dm-i8W" secondAttribute="trailing" id="0i1-eE-rG1"/>
                             <constraint firstItem="sOs-S2-waL" firstAttribute="leading" secondItem="oe9-4t-JYF" secondAttribute="leading" id="E1j-zK-oP2"/>
                             <constraint firstItem="oe9-4t-JYF" firstAttribute="bottom" secondItem="sOs-S2-waL" secondAttribute="bottom" id="ERV-rm-VFs"/>
+                            <constraint firstItem="8ls-v7-2Uh" firstAttribute="top" secondItem="oe9-4t-JYF" secondAttribute="top" constant="20" id="WDk-9U-FDt"/>
                             <constraint firstItem="oe9-4t-JYF" firstAttribute="bottom" secondItem="44e-dm-i8W" secondAttribute="bottom" id="baU-ER-A1q"/>
                             <constraint firstItem="44e-dm-i8W" firstAttribute="leading" secondItem="oe9-4t-JYF" secondAttribute="leading" id="cJ3-Lq-Z1B"/>
                             <constraint firstItem="sOs-S2-waL" firstAttribute="trailing" secondItem="oe9-4t-JYF" secondAttribute="trailing" id="hdr-dn-Wbr"/>
+                            <constraint firstItem="oe9-4t-JYF" firstAttribute="trailing" secondItem="8ls-v7-2Uh" secondAttribute="trailing" constant="20" id="wzZ-k8-IDB"/>
                             <constraint firstItem="44e-dm-i8W" firstAttribute="top" secondItem="oe9-4t-JYF" secondAttribute="top" id="xaX-Xm-PEZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oe9-4t-JYF"/>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="44e-dm-i8W" id="7SA-1B-juc"/>
+                        <outlet property="myLocationBtn" destination="8ls-v7-2Uh" id="l6i-hL-d1F"/>
                         <outlet property="storeCollectionView" destination="sOs-S2-waL" id="DtQ-Ex-aOu"/>
                     </connections>
                 </viewController>
@@ -1587,6 +1616,7 @@
         <image name="list_good" width="12" height="10"/>
         <image name="list_reply" width="12.5" height="10"/>
         <image name="list_view" width="15" height="10.5"/>
+        <image name="my_location" width="41" height="41"/>
         <image name="no_img" width="85.5" height="74"/>
         <image name="profile_no_img" width="40.5" height="41"/>
         <image name="reply_notify" width="9" height="9"/>
